--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "react-modal-video": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "animate.css": "^4.1.1",
