Fix: Add override for react-simple-scroll-up React 19 compatibility

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react-modal-video": {
       "react": "$react",
       "react-dom": "$react-dom"
+    },
+    "react-simple-scroll-up": {
+      "react": "$react",
+      "react-dom": "$react-dom"
     }
   },
   "dependencies": {
